Upgrade to JS-parent + Hyperion 3